1，完善callMethod和callStaticMethod的代码 2,完善newObject的代码 3,提供jobject到Java object的方案